Update scripts for tomcat